2015-04-15  Tim Lochmüller <tim@fruit-lab.de

	* Remove closing PHP Tags (CGL)
	* Format the PHP classes (CGL)
	* Remove old XCLASS code lines in the footer of the classes
	* Remove $GLOBALS['TYPO3_DB'] to helper method
	* Fix PhpDoc
	* import namespace classes
	* handle GeneralUtility::mkdir_deep in the right way
	* fix undefined variable notice

2015-01-12  Jürgen Kußmann <juergen.kussmann@aoe.com>

	* Add/Update dependency to TYPO3 6.2 and PHP 5.3
	* Use TYPO3-CORE-classes with namespaces

2014-11-11  Klaus Bitto <klaus@netcreators.nl>

	* Release of v2.5.2 to TER.

2014-11-01  Tim Lochmueller  <tim@fruit-lab.de>

	* Fix #61980: Use M code for ExpireByType instead of A (https://forge.typo3.org/issues/61980)
	* Fix #62538: URLs ending with "/" not handled properly (https://forge.typo3.org/issues/62538)

2014-04-10  Klaus Bitto <klaus@netcreators.nl>

	* Release of v2.5.1 to TER.

2014-03-26  Tim Lochmueller  <tim@fruit-lab.de>

	* Remove global statements and use $GLOBAL
	* Smarter explanation for plugins like ExtBase plugins, if the page is not cacheable. More details about extensionName, pluginName...

2014-03-25  Tim Lochmueller  <tim@fruit-lab.de>

	* Wrong severity in call to t3lib_div::devLog()
	* Wrap removed function t3lib_div::intval_positive in the Scheduler task to support 6.x
	* Fix old PHP4 constructor call in the cleaner task
	* Backport changes from TER version to trunk
	* Set dependencies to TYPO3 4.5 minimum
	* Wrap testInt once more, to prefer the TYPO3 CMS 4.7 t3lib_utility_Math function
	* Cleanup and add same classes to the ext_autoload.php
	* Remove PATH_t3lib usage to fit 6.x

2014-03-11  Klaus Bitto  <klaus@netcreators.nl>

	* Fixed bug: Call to undefined method TYPO3\CMS\Core\Utility\GeneralUtility::intval_positive() in class.tx_ncstaticfilecache_tasks_processDirtyPages_AdditionalFieldProvider.php (Thank you, Hendrik Reimers)
	* Increased compatibility to TYPO3 6.2.

2014-03-07  Klaus Bitto  <klaus@netcreators.nl>
