@@ -1,3 +1,7 @@
+2015-04-16  Tim Lochmüller <tim@fruit-lab.de
+
+	* [!!!] Create a command controller and mark the CLI and Tasks class as deprecated. The classes are removed in a few versions
+
 2015-04-15  Tim Lochmüller <tim@fruit-lab.de
 
 	* Remove closing PHP Tags (CGL)
